--- a/digital/accordion.html
+++ b/digital/accordion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>按鈕 Buttons</title>
+    <title>折疊選單 Accordion</title>
     <link rel="shortcut icon" href="https://www.cw.com.tw/assets_new/img/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/base16/unikitty-light.min.css">
@@ -54,7 +54,7 @@
                                     <hr class="my-40">
                                     <h2 class="mt-0 mb-10">Anatomy</h2>
                                     <p class="mt-10 mb-20">
-                                        Accordion 包含了一段標題、內文及開合icon。內文中可加入文字連結。
+                                        Accordion 包含了一段標題、內文及開合 icon。內文中可加入文字連結。
                                     </p>
                                     <div class="bg-background">
                                         <img class="d-md-block d-none mx-auto" src="../assets/system/accordion-anatomy-desktop.svg" alt="">
@@ -67,7 +67,7 @@
                                         <!-- <img class="d-md-none mx-auto" src="../assets/system/accordion-dont-mobile.svg" alt=""> -->
                                     </div>
                                     <p class="mt-20 mb-0">
-                                        不可在標題加上連結。不可使用別的icon當作收合。
+                                        不可在標題加上連結。不可使用別的 icon 當作收合。
                                     </p>
                                 </div>
                                 <div class="tab__content__pane">
